--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 sudo: required
+
+language: node_js
+
 services:
   - docker
 
 before_install:
   - docker build -t advice-app .
+  - docker run -d 127.0.0.1:3
 
 deploy:
   provider: elasticbeanstalk
